# link-shortner

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 20240617115621_links.down.sql  20240617115621_links.up.sql  20240617160849_link_statstics.down.sql  20240617160849_link_statstics.up.sql  20240617165602_settings.down.sql  20240617165602_settings.up.sql
src/: auth.rs  main.rs  routes.rs  utils.rs
